# docker-nas-plex-dvr

./: Dockerfile  README.md
.github/workflows/: docker_build.yml
dvr-manager/: .gitignore  Cargo.toml
dvr-manager/src/: main.rs  manager.rs  plex.rs
root/etc/services.d/dvr-manager/: run
root/etc/services.d/rclone-mount/: run
