[package]
name = "dvr-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
chrono = "0.4.19"
derive_builder = "0.11.2"
env_logger = "0.9.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.81"
serde_qs = "0.9.2"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
urlencoding = "2.1.0"
