[package]
name = "dvr-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
chrono = "0.4.19"
derive_builder = "0.11.2"
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env"] }
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.82"
serde_qs = "0.10.1"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
urlencoding = "2.1.0"
